# pysoundofinterrupts

./: .gitignore  LICENSE  README.md  interrupts_reader.py  interrupts_sound.py  interruptsnoise.py  interruptsplot.py  pyproject.toml  requirements.txt
scripts/: publish_to_pypi.sh
tests/: test_interrupts_reader.py
